--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "alternating-case",
   "version": "1.0.0",
   "description": "Converts strings to alternating case",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Seyi Adeleke",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.10"
+  }
 }
