--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,9 @@
 {
-    "env": {
-        "browser": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaVersion": 5
-    },
+    "extends": "airbnb-base",
     "rules": {
-        "indent": [
-            "error",
-            "tab"
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
-    }
+        "indent": [2, 4]
+    },
+    "env": {
+        "mocha": true
+    }    
 }
