--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "Converts strings to alternating case",
   "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel ./src -d ./lib"
+    "build": "babel ./src -d ./lib",
+    "lint": "eslint ./src",
+    "test": "mocha --require babel-core/register"
   },
   "author": "Seyi Adeleke",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^5.1.0"
-  },
-  "dependencies": {
-    "lodash": "^4.17.10"
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "mocha": "^5.2.0"
   }
 }
