renamed to toggle

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alternating-case",
+  "name": "toggle-case",
   "version": "1.0.0",
   "description": "Converts strings to alternating case",
   "main": "build/index.js",
