--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Converts strings to alternating case",
   "main": "build/index.js",
+  "homepage": "https://github.com/seyi-adeleke/ToGgLe-CaSe",
   "scripts": {
     "build": "babel ./src -d ./lib",
     "lint": "eslint ./src",
@@ -25,5 +26,6 @@
       "lcov",
       "text"
     ]
-  }
+  },
+  "keywords": ["text", "javascript", "Cases"]
 }
