--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toggle-case",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Converts strings to alternating case",
   "main": "build/index.js",
   "homepage": "https://github.com/seyi-adeleke/ToGgLe-CaSe",
@@ -27,5 +27,9 @@
       "text"
     ]
   },
-  "keywords": ["text", "javascript", "Cases"]
+  "keywords": [
+    "text",
+    "javascript",
+    "Cases"
+  ]
 }
