--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepublishOnly": "npm run build"
   },
   "author": "Seyi Adeleke",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
